--- a/src/main/resources/templates/addNews.html
+++ b/src/main/resources/templates/addNews.html
@@ -10,17 +10,18 @@
 	</div>
 	<div class="container">
 		<ul class="nav nav-tabs">
-			<li class="active"><a th:href="@{/admin}">Danh sách tài khoản</a></li>
-			<li><a th:href="@{/addNews}">Danh sách tin tức</a></li>
+			<li><a th:href="@{/admin}">Danh sách tài
+					khoản</a></li>
+			<li class="active"><a th:href="@{/addNews}">Danh sách tin tức</a></li>
 		</ul>
 		<h3 class="text-center">
-			<strong>QUẢN LÝ DANH SÁCH TÀI KHOẢN</strong>
+			<strong>QUẢN LÝ TIN TỨC MỚI</strong>
 		</h3>
 		<br></br>
 
 		<div class="container">
-			<a th:href="@{/admin/create}" class="btn btn-success pull-left">
-				<span class="glyphicon glyphicon-plus"></span> Add new account
+			<a th:href="@{/addNews/createNews}" class="btn btn-success pull-left">
+				<span class="glyphicon glyphicon-plus"></span> Thêm tin tức mới
 			</a> <br></br> <br></br> <br></br>
 		</div>
 
@@ -33,29 +34,31 @@
 			<span th:text="${success}"></span>
 		</div>
 
-		<th:block th:unless="${#lists.isEmpty(accounts)}">
+		<th:block th:unless="${#lists.isEmpty(news)}">
 			<div class="table-responsive">
 				<table class="table table-striped table-bordered text-left">
 					<thead>
 						<tr>
 							<th><strong>ID </strong></th>
-							<th>Username</th>
-							<th>Password</th>
-							<th>Email</th>
+							<th>Title</th>
+							<th>Content</th>
+							<th>Creater</th>
+							<th>Date Create</th>
 							<th>Edit</th>
 							<th>Delete</th>
 						</tr>
 					</thead>
 					<tbody>
-						<tr th:each="account,iterStat : ${accounts}">
+						<tr th:each="news,iterStat : ${news}">
 							<td th:text="${iterStat.count}"></td>
-							<td th:text="${account.username}"></td>
-							<td th:text="${account.password}"></td>
-							<td th:text="${account.email}"></td>
-							<td><a th:href="@{/account/{id}/edit(id=${account.id})}"><span
+							<td th:text="${news.title}"></td>
+							<td th:text="${news.content}"></td>
+							<td th:text="${news.creater}"></td>
+							<td th:text="${news.date_created}"></td>
+							<td><a th:href="@{/news/{id}/edit(id=${news.id})}"><span
 									class="glyphicon glyphicon-pencil" data-toggle="modal"
 									data-target=".modal"></span></a></td>
-							<td><a th:href="@{/account/{id}/delete(id=${account.id})}"><span
+							<td><a th:href="@{/news/{id}/delete(id=${news.id})}"><span
 									class="glyphicon glyphicon-trash"></span></a></td>
 						</tr>
 					</tbody>
